Change ingredients to list (instead of headings)

--- a/recipes.org
+++ b/recipes.org
@@ -1,14 +1,14 @@
 * Red beet soup with potato mash
 ** Ingredients:
-*** 4 cooked red beets
-*** 4 Onions/shallots
-*** 0.75L stock
-*** 4 ts honey
-*** 4 ts curry powder (e.g. hot madras curry)
-*** half a lime/lemon for juice
-*** 4 big soft-boiling potatoes
-*** ~150g creme fraiche/sauerrahm
-*** Some nutmeg
+- 4 cooked red beets
+- 4 Onions/shallots
+- 0.75L stock
+- 4 ts honey
+- 4 ts curry powder (e.g. hot madras curry)
+- half a lime/lemon for juice
+- 4 big soft-boiling potatoes
+- ~150g creme fraiche/sauerrahm
+- Some nutmeg
 ** Steps:
 1) Cook potatoes (~30min starting in cold salted water)
 2) Peel and slice beets, cover in some flour
@@ -18,18 +18,18 @@
 6) Take potatoes, mash up and add creme fraiche and nutmeg
 * Tomato caper sauce with chicken and salad
 ** Ingredients:
-*** ~2.5 double-handfulls  of cherry tomatoes
-*** 2 big onions
-*** A glass of capers
-*** White wine vinegar
-*** Chicken breast
-*** Some flour
-*** Breading optional
-*** Leafy salad
-*** One more onion
-*** 1 tbsp of mustard
-*** Olive oil
-*** Good balsamic vinegar
+- ~2.5 double-handfulls  of cherry tomatoes
+- 2 big onions
+- A glass of capers
+- White wine vinegar
+- Chicken breast
+- Some flour
+- Breading optional
+- Leafy salad
+- One more onion
+- 1 tbsp of mustard
+- Olive oil
+- Good balsamic vinegar
 ** Steps:
 1) Satee onions with olive oil in pot
 2) Add halfed tomatoes
